tests/baselines/reference/asyncGetter3.errors.txt
tests/cases/conformance/async/downlevel/asyncGetter/asyncGetter3.ts(9,33): error TS1109: Expression expected.
tests/cases/conformance/async/downlevel/asyncGetter/asyncGetter3.ts(7,13): error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.


==== tests/cases/conformance/async/downlevel/asyncGetter/asyncGetter3.ts (2 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    class C {
      async get bar(): Promise<void> {
                ~~~
!!! error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
        // 'await' here is an identifier, and not an await expression.
        async function foo(a = await): Promise<void> {
                                    ~
!!! error TS1109: Expression expected.
        }
      }
    }